Bug 221450 - konsole does not restore encoding
Summary: konsole does not restore encoding
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-05 22:42 UTC by Andreas
Modified: 2010-06-04 14:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas 2010-01-05 22:42:17 UTC
Version:            (using KDE 4.3.2)
OS:                Linux
Installed from:    Ubuntu Packages

How to reproduce the error:

- open konsole
- change encoding to something not default
- reboot system without closing the konsole

After the reboot, KDE is restoring the konsole, but the encoding is the default setting now.

In KDE 3 the encoding was saved in the session data and restored after reboot.
Comment 1 Robert Knight 2010-01-06 11:52:09 UTC
Hello - This is the expected behaviour, though evidently a usability problem.  To change the encoding permanently (as opposed to just for a single tab) go to Settings -> Edit Current Profile -> Advanced.  The default encoding can be specified using the combo-box at the bottom of that tab.
Comment 2 Andreas 2010-01-06 11:56:46 UTC
I'm sorry? This is expected behaviour?
You got me wrong: i don't want to change the encoding for a specific profile neither do i want to change the default encoding.

I just want konsole to restore the exact same session settings after reboot, that's all. That's why KDE has a session management.

This worked perfectly fine in KDE 3 and was removed in KDE 4.
Comment 3 Andreas 2010-05-15 23:54:44 UTC
Still open in KDE 4.4 (Kubuntu 10.4).
Session management is still not worth the name.
Comment 4 Kurt Hindenburg 2010-06-04 14:27:19 UTC
SVN commit 1134480 by hindenburg:

Save character encoding to session management.

BUG: 221450


 M  +3 -0      Session.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1134480
Comment 5 Kurt Hindenburg 2010-06-04 14:52:35 UTC
SVN commit 1134494 by hindenburg:

Save character encoding to session management.

CCBUG: 221450


 M  +3 -0      Session.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1134494