Save character encoding to session management.

BUG: 221450

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=1134480